# sharik

./: .gitignore  README.md  dune  dune-project  sharik.install  sharik.opam
lib/: .ocamlinit  board.ml  board.mli  ctx.ml  ctx.mli  dune  eval.ml  eval.mli  forceMove.ml  forceMove.mli  hash.ml  hash.mli  info.ml  info.mli  move.ml  move.mli  moveGen.ml  moveGen.mli  piece.ml  piece.mli  search.ml  search.mli  side.ml  side.mli  square.ml  square.mli  time.mli  turn.ml  turn.mli  uci.ml  uci.mli  val.ml  val.mli
test/: dune  test.ml
